--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -65,9 +65,11 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="16dp"/>
     <TextView
-        style="@style/Body1"
+        style="@style/Subtitle"
+        android:textStyle="bold"
         android:id="@+id/title_content"
-        android:layout_margin="31dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contatos"
